GNOME Bugzilla – Bug 752979
String "Loading..." not marked for translation
Last modified: 2015-07-30 04:37:31 UTC
String "Loading..." in https://git.gnome.org/browse/libgweather/tree/libgweather/gweather-location-entry.c#n784 is not marked for translation. I think this may be the source of English "Loading..." appearing in my 100% translated gnome-weather.
Yep, it should be translated, please go ahead and fix it.
Created attachment 308406 [details] [review] Mark forgotten string for translation Could you please check if it's correct?
It was correct Attachment 308406 [details] pushed as 3c38879 - Mark forgotten string for translation