Mark forgotten string for translation

Also adds the file to POTFILES.in.

https://bugzilla.gnome.org/show_bug.cgi?id=752979